--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ chardet==3.0.4
 click==6.7
 dominate==2.3.1
 # elasticsearch==7.5.1
-Flask==1.0.2
 # Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==4.0.0
@@ -36,6 +35,27 @@ urllib3==1.22
 visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.1
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+distlib==0.3.8
+filelock==3.13.1
+Flask==3.0.0
+gitdb==4.0.11
+GitPython==3.1.42
+idna==3.6
+itsdangerous==.1.2
+Jinja2==3.1.2
+pip==23.0.1
+platformdirs==4.1.0
+python-nmap==0.7.1
+requests==2.31.0
+setuptools==66.1.1
+smmap==5.0.1
+urllib3==2.2.1
+virtualenv==20.25.0
+Werkzeug==3.0.1
 
 # requirements for running in Production settings
 gunicorn==19.7.1
